<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="340dp"
              android:layout_height="wrap_content"
              android:layout_margin="8dp">

    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/dialog_background"/>

    <TextView
        android:id="@+id/recomendations_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/recomendations"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/recomendations_title_textView"
        android:layout_above="@+id/accept_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/faster_x2"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/if_no_movile_data"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="13sp"/>

                <Button
                    android:id="@+id/disable_data_button"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ripple_blue"
                    android:text="@string/disable_data"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/faster_x3"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/if_ariplane_mode"
                    android:layout_marginBottom="10dp"

                    android:textSize="13sp"/>

                <Button
                    android:id="@+id/enable_airplane_mode_button"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ripple_blue"
                    android:text="@string/enable_airplane_mode"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/faster_x2"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/if_no_location_data"
                    android:layout_marginBottom="10dp"
                    android:textSize="13sp"/>

                <Button
                    android:id="@+id/disable_gps_button"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ripple_blue"
                    android:text="@string/disable_location"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/background_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_blue"
        android:text="@string/accept"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

</RelativeLayout>