<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="210dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="47dp"
            android:gravity="center"
            android:text="@string/done2"
            android:textSize="18sp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/title_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:gravity="center"
            android:text="@string/done"
            android:textSize="18sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/show_welcome_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/content_textView"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>