<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Task"
            android:textSize="18sp"
            android:layout_marginBottom="32dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/content_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_below="@+id/title_textView"
            android:text="@string/task_msg"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/show_welcome_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>